--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   bot:
-    image: events-pi:latest
+    image: ghcr.io/ZanoTN/events-pi:latest
     restart: unless-stopped
     environment:
       # Telegram configs:
