--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -11,5 +11,5 @@ jobs:
       - name: Build and push image
         run: |
           docker login --username ZanoTN --password ${{ secrets.GH_PAT }} ghcr.io
-          docker build . --tag ghcr.io/ZanoTN/events-pi:latest
-          docker push ghcr.io/ZanoTN/events-pi:latest
+          docker build . --tag ghcr.io/zanotn/events-pi:latest
+          docker push ghcr.io/zanotn/events-pi:latest
