--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -3,15 +3,34 @@ name: Docker Images for GHCR
 on:
   push:
     branches:
-      - main
+      - "main"
 
 jobs:
-  build_and_publish:
+  docker:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Build and push image
-        run: |
-          docker login --username ZanoTN --password ${{ secrets.GH_PAT }} ghcr.io
-          docker build . --tag ghcr.io/zanotn/events-pi:latest
-          docker push ghcr.io/zanotn/events-pi:latest
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ZanoTN
+          password: ${{ secrets.GH_PAT }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          provenance: false
+          push: true
+          tags: ghcr.io/zanotn/events-pi:latest
