Added time zone settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,3 +28,5 @@ services:
       BOT_REMINDER_TIME: "1hr|6hr|18|08-18"
       # Send an extra message at 14:00 of sunday with all events of the next week (yes|no)
       BOT_WEEKLY_REMINDER: yes
+      # Set local time zone, See: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+      TZ:
