--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/ZanoTN/EventsPi#readme",
   "dependencies": {
-    "dotenv": "^16.3.1",
     "googleapis": "^124.0.0",
     "node-telegram-bot-api": "^0.61.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
