Added db persistent

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
 version: '3'
+
 services:
   bot:
     image: ghcr.io/zanotn/events-pi:latest
     restart: unless-stopped
+    volumes:
+      - db-data:/app/db-data
     environment:
       # Telegram configs:
       # See for more info: https://core.telegram.org/bots#how-do-i-create-a-bot
@@ -30,3 +33,6 @@ services:
       BOT_WEEKLY_REMINDER: yes
       # Set local time zone, See: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
       TZ:
+
+volumes:
+  db-data:
